[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geese"
version = "1.1.4"
description = "Cribl Geese: A Cribl Migration Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Aplura, LLC", email = "appsupport@aplura.com" },
]
keywords = [
    "aplura",
    "cribl",
    "migration",
]
classifiers = [
    "Development Status :: 2 - Beta",
    "License :: MIT",
    "Topic :: Utilities",
]
dependencies = [
    "deepdiff",
    "deepmerge",
    "multicommand",
    "PyYAML",
    "termcolor",
    "urllib3",
]

[project.scripts]
geese = "geese:main.main"

[project.urls]
Homepage = "https://github.com/aplura/cribl_geese"
Issues = "https://github.com/aplura/cribl_geese/issues"