[build-system]
requires = ["setuptools==73.0.1", "urllib3>=2.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "geese"
version = "1.1.5"
description = "Cribl Geese: A Cribl Migration Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Aplura, LLC", email = "appsupport@aplura.com" },
]
keywords = [
    "aplura",
    "cribl",
    "migration",
]
classifiers = [
    "Development Status :: 2 - Beta",
    "License :: MIT",
    "Topic :: Utilities",
]
dependencies = [
    "deepdiff",
    "deepmerge",
    "multicommand",
    "PyYAML",
    "termcolor",
    "urllib3>=2.2.2",
    "openapi-schema-validator"
]

[project.scripts]
geese = "geese:main.main"

[project.urls]
Homepage = "https://github.com/aplura/cribl_geese"
Issues = "https://github.com/aplura/cribl_geese/issues"